<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView_input_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_weight_dicision"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/out_input_weight" />

    <EditText
        android:id="@+id/editText_input_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_input_weight"
        android:layout_toLeftOf="@+id/textView_out_kg"
        android:layout_toRightOf="@+id/textView_input_weight"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_out_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText_input_weight"
        android:layout_centerHorizontal="true"
        android:text="@string/out_kg" />

    <Button
        android:id="@+id/button_weight_dicision"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView_out_kg"
        android:text="@string/out_decision"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_manpokei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_data_reset"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/editText_input_weight"
        android:background="#ffffccff"
        android:text="@string/out_manpokei" />

    <Button
        android:id="@+id/button_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_manpokei"
        android:layout_alignLeft="@+id/button_weight_dicision"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button_manpokei"
        android:background="#ff99ffcc"
        android:text="@string/out_graph" />

    <Button
        android:id="@+id/button_data_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_manpokei"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:layout_toLeftOf="@+id/textView_out_kg"
        android:text="@string/out_data_reset" />

    <Button
        android:id="@+id/button_all_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_data_reset"
        android:layout_alignBottom="@+id/button_data_reset"
        android:layout_alignRight="@+id/button_graph"
        android:layout_toRightOf="@+id/textView_out_kg"
        android:text="@string/out_all_reset" />

    <Spinner
        android:id="@+id/main_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/editText_input_weight" />

    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@+id/main_spinner"
        android:layout_below="@+id/main_spinner" >

        <TableLayout
            android:id="@+id/main_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableLayout>
    </ScrollView>

</RelativeLayout>