<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_graphweight_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/out_weight" />

    <Button
        android:id="@+id/button_graphweight_calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_graphweight_weight"
        android:layout_alignBottom="@+id/button_graphweight_weight"
        android:layout_centerHorizontal="true"
        android:text="@string/out_calorie" />

    <Button
        android:id="@+id/button_graphweight_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_graphweight_calorie"
        android:layout_alignBottom="@+id/button_graphweight_calorie"
        android:layout_alignParentRight="true"
        android:text="@string/out_step" />

    <TextView
        android:id="@+id/textView_graphweight_comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_graphweight_comment"
        android:layout_alignBottom="@+id/textView_graphweight_comment"
        android:layout_toRightOf="@+id/textView_graphweight_comment"
        android:text="@string/comment_weight" />

    <Button
        android:id="@+id/button_graphweight_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/out_back" />

    <TextView
        android:id="@+id/textView_graphweight_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_graphweight_weight"
        android:layout_below="@+id/button_graphweight_weight"
        android:layout_marginTop="20dp"
        android:text="@string/out_comment" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_graphweight_comment_text"
        android:layout_marginTop="31dp"
        android:layout_toLeftOf="@+id/button_graphweight_step"
        android:layout_toRightOf="@+id/button_graphweight_weight" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/textView_graphweight_comment"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="24dp" >

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableLayout>
    </ScrollView>
    
    <RelativeLayout
	android:id="@+id/chart" 
	android:orientation="horizontal" 
	android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_marginBottom="40dp"
    android:layout_height="350dp"/>

</RelativeLayout>